# django-tasks-scheduler

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  x.sh
.github/: CONTRIBUTING.md  dependabot.yml  release-drafter.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/test-coverage/: action.yml
.github/workflows/: publish-documentation.yml  publish.yml  test-workflow.yml  test.yml
changelog/: index.html
commands/: index.html
configuration/: index.html
docs/: changelog.md  commands.md  configuration.md  drt-model.md  index.md  installation.md  migrate_to_v3.md  requirements.txt  usage.md
drt-model/: index.html
installation/: index.html
migrate_to_v3/: index.html
scheduler/: __init__.py  _config_types.py  apps.py  broker_types.py  configuration_types.py  connection_types.py  decorators.py  queues.py  rq_classes.py  settings.py  settings_types.py  timeouts.py  tools.py  urls.py  views.py
scheduler/admin/: __init__.py  ephemeral_models.py  job.py  old_task_models.py  redis_models.py  task_admin.py  task_models.py
scheduler/helpers/: callback.py  sentry_integration.py  timeouts.py  tools.py  utils.py
scheduler/helpers/queues/: __init__.py  getters.py  queue_logic.py
scheduler/management/commands/: delete_failed_executions.py  export.py  import.py  rqstats.py  rqworker.py  run_job.py  scheduler_stats.py  scheduler_worker.py
scheduler/migrations/: 0001_initial_squashed_0005_added_result_ttl.py  0002_alter_cronjob_id_alter_repeatablejob_id_and_more.py  0003_auto_20220329_2107.py  0004_cronjob_at_front_repeatablejob_at_front_and_more.py  0005_alter_cronjob_at_front_alter_repeatablejob_at_front_and_more.py  0006_auto_20230118_1640.py  0007_add_result_ttl.py  0008_rename_str_val_jobarg_val_and_more.py  0009_alter_jobarg_arg_type_alter_jobarg_val_and_more.py  0010_queue.py  0011_worker_alter_queue_options_alter_cronjob_at_front_and_more.py  0012_alter_cronjob_name_alter_repeatablejob_name_and_more.py  0013_alter_cronjob_queue_alter_repeatablejob_queue_and_more.py  0014_alter_cronjob_created_alter_cronjob_modified_and_more.py  0015_rename_cronjob_crontask_and_more.py  0016_rename_jobarg_taskarg_rename_jobkwarg_taskkwarg_and_more.py  0017_remove_crontask_repeat_crontask_failed_runs_and_more.py  0018_alter_crontask_queue_alter_repeatabletask_queue_and_more.py  0019_task.py  0019_task_crontask_new_task_id_repeatabletask_new_task_id_and_more.py  0020_alter_task_task_type.py  0020_remove_repeatabletask_new_task_id_and_more.py  0021_remove_task_job_id_task_job_name.py
scheduler/models/: __init__.py  args.py  ephemeral_models.py  migrate_util.py  old_scheduled_task.py  queue.py  scheduled_job.py  scheduled_task.py  task.py  worker.py
scheduler/redis_models/: __init__.py  base.py  job.py  lock.py  result.py  worker.py
scheduler/redis_models/registry/: __init__.py  base_registry.py  queue_registries.py
scheduler/static/admin/js/: autocomplete-callable.js  select-fields.js
scheduler/templates/admin/scheduler/: change_form.html  change_list.html  confirm_action.html  job_detail.html  jobs-list-with-tasks.partial.html  jobs-list.partial.html  jobs.html  queue_workers.html  scheduler_base.html  single_job_action.html  stats.html  worker_details.html  workers-list.partial.html  workers.html  workers_list.html
scheduler/templatetags/: scheduler_tags.py
scheduler/tests/: conf.py  jobs.py  test_admin.py  test_admin_permissions.py  test_cron_task.py  test_internals.py  test_job_arg_models.py  test_job_decorator.py  test_mgmt_cmds.py  test_models.py  test_old_models.py  test_old_task_model.py  test_queue_getters.py  test_redis_models.py  test_repeatable_task.py  test_settings.py  test_task_admin.py  test_task_admin_display.py  test_task_model.py  test_views.py  test_worker.py  testtools.py
scheduler/tests/test_mgmt_commands/: test_delete_failed_executions.py  test_export.py  test_import.py  test_rq_stats.py  test_rq_worker.py  test_run_job.py  test_scheduler_stats.py  test_scheduler_worker.py
scheduler/tests/test_multiprocess/: test_integrity.py
scheduler/tests/test_old_models/: test_cron_task.py  test_old_models.py  test_old_repeatable_task.py  test_old_task_model.py
scheduler/tests/test_task_types/: test_cron_task.py  test_once_task.py  test_repeatable_task.py  test_task_model.py
scheduler/tests/test_views/: base.py  test_job_detail_action.py  test_job_details.py  test_queue_actions.py  test_queue_job_action.py  test_queue_registry_jobs.py  test_workers_view.py
scheduler/tests/test_worker/: test_scheduler.py  test_worker_commands.py  test_worker_commands_multiprocess.py  test_worker_creation.py
scheduler/types/: __init__.py  broker_types.py  settings_types.py
scheduler/views/: __init__.py  callables.py  helpers.py  job_views.py  queue_job_actions.py  queue_registry_actions.py  queue_views.py  worker_views.py
scheduler/worker/: __init__.py  local.py  scheduler.py  worker.py
scheduler/worker/commands/: __init__.py  kill_worker.py  shutdown.py  stop_job.py  suspend_worker.py  worker_commands.py
search/: search_index.json
testproject/testproject/: settings.py  urls.py  views.py  wsgi.py
usage/: index.html
