[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "django-tasks-scheduler"
version = "4.2.0"
description = "An async job scheduler for django using redis/valkey brokers"
readme = "README.md"
keywords = [
  "background-jobs",
  "django",
  "job-queue",
  "redis",
  "redis-queue",
  "scheduled-jobs",
  "task-queue",
  "valkey",
]
license = "MIT"
maintainers = [ { name = "Daniel Moran", email = "daniel@moransoftware.ca" } ]
authors = [ { name = "Daniel Moran", email = "daniel@moransoftware.ca" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click~=8.2",
  "croniter>=2",
  "django>=5",
  "typing-extensions>=4.15",
]
optional-dependencies.sentry = [ "sentry-sdk~=2.19" ]
optional-dependencies.valkey = [ "valkey>=6.0.2" ]
optional-dependencies.yaml = [ "pyyaml>=6", "types-pyyaml>=6.0.12.20250516" ]
urls."Bug Tracker" = "https://github.com/django-commons/django-tasks-scheduler/issues"
urls.Documentation = "https://django-tasks-scheduler.readthedocs.io/"
urls.Funding = "https://github.com/sponsors/cunla"
urls.Homepage = "https://github.com/django-commons/django-tasks-scheduler"

[dependency-groups]
dev = [
  "beautifulsoup4>=4.13.4",
  "coverage[toml]>=7.10",
  "fakeredis>=2.28",
  "mypy>=1.20",
  "pre-commit>=4.2",
  "pyyaml>=6",
  "ruff>=0.15",
  "time-machine>=2.19",
  "types-croniter>=6.0.0.20250411",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.4",
]

[tool.hatch]
build.targets.wheel.include = [ "scheduler" ]
build.targets.sdist.include = [ "scheduler" ]

[tool.ruff]
line-length = 120
exclude = [
  ".venv",
  "__pycache__",
  "scheduler/migrations",
  "testproject",
]
lint.extend-ignore = [ "PIE790" ]
lint.per-file-ignores."scheduler/models/args.py" = [ "DJ012" ]
lint.per-file-ignores."scheduler/models/ephemeral_models.py" = [ "DJ008" ]
lint.per-file-ignores."scheduler/models/task.py" = [ "DJ001", "DJ012" ]
lint.mccabe.max-complexity = 13

[tool.mypy]
packages = [ "scheduler" ]
exclude = [
  "scheduler/migrations/.*\\.py",
  "scheduler/tests/.*\\.py",
  "testproject/.*\\.py",
  "testproject/tests/.*\\.py",
]
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
strict = true
scripts_are_modules = true
